--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "^1.30.0"
+    "@google/genai": "^1.30.0",
+    "@supabase/supabase-js": "^2.87.1",
+    "dotenv": "^17.2.3",
+    "@aws-sdk/client-s3": "^3.948.0",
+    "@aws-sdk/s3-request-presigner": "^3.948.0",
+    "express": "^5.2.1",
+    "http": "^0.0.1-security",
+    "cors": "^2.8.5",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
