--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^5.2.1",
     "http": "^0.0.1-security",
     "cors": "^2.8.5",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
